google_provider.tf
# Configure the Google Cloud Provider

provider "google" {
  credentials = file(var.credentials_file)
  project     = var.project
  region      = var.region
  zone        = var.zone
}

resource "google_compute_network" "vpc_network" {
  name = "fp-regulation-network"
}

resource "google_compute_instance" "vm_instance" {
  name         = "portal-regulation"
  machine_type = "e2-standard-2"
  tags         = ["web", "dev"]

  boot_disk {
    initialize_params {
      image = "cos-cloud/cos-stable"
    }
  }

  network_interface {
    network = google_compute_network.vpc_network.name
    access_config {
    }
  }
}
